# cache_efficiency_talk

./: .gitignore  CMakeLists.txt  Writing Cache Efficient Code.pptx  benchmark.cpp  matrix2d.h  step1.sh  step2.sh  step3.sh  step4.sh  step5.sh  step6.sh  tensor3d.h  transpose.h  transpose_blocked.cpp  transpose_simple.cpp
benchmark/: CMakeLists.txt  benchmark_transpose.cpp  benchmark_traversal.cpp
dependencies/: CMakeLists.txt
dependencies/eigen/: CMakeLists.txt
dependencies/xsimd/: CMakeLists.txt
dependencies/xtensor/: CMakeLists.txt
dependencies/xtl/: CMakeLists.txt
tests/: CMakeLists.txt  test_transpose.cpp
